--- a/modules/administration/pages/tshoot-osadjabberd.adoc
+++ b/modules/administration/pages/tshoot-osadjabberd.adoc
@@ -38,7 +38,7 @@ You can increase the number of files available to jabber by editing the [systemi
 
 .Procedure: Adjusting the Maximum File Count
 
-. At the command prompt, as root, open the [path]``/etc/systemd/system/httpd.service.d/local.conf`` in yourr preferred editor.
+. As root, edit the [path]``/etc/systemd/system/httpd.service.d/local.conf`` file.
 . Add or edit this section:
 +
 ----
