--- a/modules/administration/pages/tshoot-osadjabberd.adoc
+++ b/modules/administration/pages/tshoot-osadjabberd.adoc
@@ -39,7 +39,7 @@ You can increase the number of files available to jabber by editing the [systemi
 .Procedure: Adjusting the Maximum File Count
 
 . As root, edit the [path]``/etc/systemd/system/httpd.service.d/local.conf`` file.
-. Add or edit this section:
+Add or edit this section:
 +
 ----
 [Unit]
