--- a/modules/administration/pages/tshoot-osadjabberd.adoc
+++ b/modules/administration/pages/tshoot-osadjabberd.adoc
@@ -35,10 +35,7 @@ For more information about tuning large scale installations, see xref:salt:large
 ====
 
 You can increase the number of files available to jabber by editing the [systemitem]``LimitNOFILE`` service file in [command]``systemd``.
-
-.Procedure: Adjusting the Maximum File Count
-
-. As root, edit the [path]``/etc/systemd/system/httpd.service.d/local.conf`` file.
+As root, edit the [path]``/etc/systemd/system/httpd.service.d/local.conf`` file.
 Add or edit this section:
 +
 ----
