fix faulty merge add forgotten changes and remove proxy-upgrade.adoc

--- a/modules/upgrade/pages/proxy-update.adoc
+++ b/modules/upgrade/pages/proxy-update.adoc
@@ -3,7 +3,7 @@
 
 {productname} Proxies are managed in the same way as clients.
 Maintenance updates (MU) can be installed on a {productname} Proxy in the same way as other clients.
-Some updates will require a restart of the proxy service.
+MU updates require a restart of the proxy service.
 
 // a remote command (or a salt state) can perform the restart.
 // Creating an Action Chain can help with this task.
@@ -20,7 +20,7 @@ Some updates will require a restart of the proxy service.
 == Prepare to Update
 
 Before you perform any proxy update, schedule a maintenance window.
-The clients registered to {productname} through the proxy will not be able to connect to {productname} while the upgrade is in progress.
+The clients registered to {productname} through the proxy will not be able to connect to {productname} while the update is in progress.
 For more information about maintenance windows, see xref:administration/maintenance-window.adoc[].
 
 
@@ -38,7 +38,7 @@ To update a proxy you first stop the proxy service, then update the software and
 spacewalk-proxy stop
 ----
 
-. Select the packages to be updated on the proxy.
+. Select the packages to be updated on the proxy, and then apply the selection.
 
 . On the {productname} Server where the proxy is registered as a client, start the proxy service:
 +
