--- a/modules/installation/pages/general-requirements.adoc
+++ b/modules/installation/pages/general-requirements.adoc
@@ -4,7 +4,7 @@
 // REMARK this list needs to be cleaned up
 Before you begin installation, ensure that you have:
 
-* You have current {scc} organization credentials
+* Current {scc} organization credentials
 * Access to installation media
 * Environment meets the hardware and networking requirements
 * You understand the supported client operating systems
