--- a/modules/installation/pages/general-requirements.adoc
+++ b/modules/installation/pages/general-requirements.adoc
@@ -7,8 +7,8 @@ Before you begin installation, ensure that you have:
 * Current {scc} organization credentials
 * Access to installation media
 * Environment meets the hardware and networking requirements
-* You understand the supported client operating systems
 
+You should also ensure that you understand the supported client operating systems.
 
 This section contains more information on each of these requirements.
 
