--- a/modules/administration/pages/maintenance-window.adoc
+++ b/modules/administration/pages/maintenance-window.adoc
@@ -15,19 +15,17 @@ You must keep it up-to-date or you will risk not being able to update something 
 
 This section contains a checklist for your maintenance window, with links to further information on performing each of the steps, if you need it.
 
-
-. Stop spacewalk services.
+// ke, 2019-09-30: we'll stop spacewalk during the update
+// . Stop spacewalk services.
 // You will need to stop the spacewalk, SAP, and database services, along with any others you have running.
 . Check if the configuration is still correct.
-. On Salt systems, apply the highstate.
 . Apply the latest updates.
 See xref:upgrade:server-update.adoc[].
 . Update to the latest service pack, if required.
 See xref:upgrade:migrate-4x-4x.adoc[].
 . Reboot the server.
 . Check if the configuration is still correct.
-. On Salt systems, apply the highstate.
-. Start any stopped services.
+// . Start any stopped services.
 
 
 You can install updates using your package manager.
