--- a/modules/upgrade/pages/migrate-4x-4x.adoc
+++ b/modules/upgrade/pages/migrate-4x-4x.adoc
@@ -7,8 +7,8 @@ Migrating {productname} from version 4 to 4.x (when available) can be done usin
 
 [IMPORTANT]
 ====
-Upgrades should be run from a text console, rather than a graphical interface like GNOME.
-If you are logged into a GNOME session running on the machine you are going to update, you will need to switch to a text console.
+Migrations should be run from a text console, rather than a graphical interface like GNOME.
+If you are logged into a GNOME session running on the machine you are going to migrate, you will need to switch to a text console.
 This does not apply if you are logged in from a remote machine (unless you are running a VNC session with GNOME).
 ====
 
@@ -38,7 +38,7 @@ If the process fails, check these issues first:
 * If {yast} does not have the online migration module available, install the [package]``yast2-migration`` package.
 After installing, restart {yast} to ensure the module is available.
 * If there are older updates available, {yast} will notify you and ask to install them first.
-We strongly recommend you install all updates before performing the upgrade.
+We strongly recommend you install all updates before performing the migration.
 
 During the migration, {yast} will install all recommended packages.
 This can significantly increase the installation size of the system.
@@ -74,6 +74,6 @@ spacewalk-service start
 
 If the process fails, check these issues first:
 
-* If Zypper  does not have the migration tool available, install the [package]``zypper-migration-plugin`` package.
+* If Zypper does not have the migration tool available, install the [package]``zypper-migration-plugin`` package.
 * If there are older updates available, Zypper will notify you and ask to install them first.
-We strongly recommend you install all updates before performing the upgrade.
+We strongly recommend you install all updates before performing the migration.
