--- a/modules/administration/pages/maintenance-window.adoc
+++ b/modules/administration/pages/maintenance-window.adoc
@@ -27,13 +27,13 @@ See xref:upgrade:migrate-4x-4x.adoc[].
 . Check if the configuration is still correct.
 // . Start any stopped services.
 
+For information about database schema upgrades and PostgreSQL migrations, see xref:upgrades:db-migration.adoc[].
 
 You can install updates using your package manager.
 For information on using {yast}, see https://www.suse.com/documentation/sles-15/book_sle_admin/data/cha_onlineupdate_you.html).
 For information on using zypper, see https://www.suse.com/documentation/sles-15/book_sle_admin/data/sec_zypper.html).
 
 ////
-
 Preferable, you will run such a tool within a maintenance window; for more information, see xref:administration:maintenance-window.adoc#maintenance-window[].
 
  complete procedure, also see above:
@@ -50,7 +50,7 @@ Preferable, you will run such a tool within a maintenance window; for more infor
 By default, several update channels are configured and enabled for the {susemgr} Server.
 New and updated packages will become available automatically.
 
-To keep {susemgr} up to date, you must have it connected directly to {scc}.
+To keep {susemgr} up to date, you must have it connected directly to {scc}.
 Alternatively, for disconnected environments, you can use {rmtool} (RMT) as a local installation source.
 
 You can check that the update channels are available on your system with this command:
