--- a/modules/client-configuration/pages/clients-centos.adoc
+++ b/modules/client-configuration/pages/clients-centos.adoc
@@ -31,7 +31,7 @@ zypper in spacewalk-utils
 ----
 spacewalk-common-channels -u admin -p `secret` -a x86_64 'centos7'
 spacewalk-common-channels -u admin -p `secret` -a x86_64 'centos7-updates'
-spacewalk-common-channels -u admin -p `secret` -a x86_64 'centos7-uyuni-client-x86_64'
+spacewalk-common-channels -u admin -p `secret` -a x86_64 'centos7-uyuni-client'
 ----
 
 .Procedure: Synchronizing {centos} Clients
