--- a/modules/administration/pages/auth-methods.adoc
+++ b/modules/administration/pages/auth-methods.adoc
@@ -112,7 +112,7 @@ After the authentication with the IdP using the user `orgadmin` is successful, y
 
 
 
-=== Enable SOO
+=== Enable SSO
 
 [NOTE]
 ====
