--- a/modules/ROOT/pages/index.adoc
+++ b/modules/ROOT/pages/index.adoc
@@ -24,7 +24,7 @@ The following documentation is available for {productname} version {productnumbe
 [IMPORTANT]
 ====
 {productnamee} documentation is available in several locations and formats.
-For the most up-to-date version of this documentation, check https://opensource.suse.com/doc-susemanager first.
+For the most up-to-date version of this documentation, check https://documentation.suse.com/suma/4.0/ first.
 ====
 
 Download All PDFs icon:caret-right[] icon:file-archive[link="../susemanager-docs_en-pdf.tar.gz"]
