edits per feedback

--- a/modules/administration/pages/tshoot-osadjabberd.adoc
+++ b/modules/administration/pages/tshoot-osadjabberd.adoc
@@ -34,22 +34,20 @@ In this case, we recommend you consider using Salt clients instead.
 For more information about tuning large scale installations, see xref:salt:large-scale.adoc[].
 ====
 
-You can increase the number of files available to jabber by editing the [systemitem]``LimitNOFILE`` service file in [command]``systemd``.
+You can increase the number of files available to jabber by editing the [systemitem]``LimitNOFILE`` service file in [command]``systemd``:
 
-.Procedure: Adjusting the Maximum File Count
-
-. As root, edit the [path]``/etc/systemd/system/httpd.service.d/local.conf`` file.
+As root, edit the [path]``/usr/lib/systemd/system/jabberd.service/local.conf`` file.
 Add or edit this section:
-+
+
 ----
 [Unit]
 LimitNOFILE=
 LimitNOFILE=<soft_limit>:<hard_limit>
 ----
-+
+
 The value you choose will vary depending on your environment.
 For example, if you have 5000 clients, increase the soft value by 100 to 5100, and the hard value by 1000 to 6000:
-+
+
 ----
 [Unit]
 LimitNOFILE=
