--- a/modules/retail/pages/retail-components.adoc
+++ b/modules/retail/pages/retail-components.adoc
@@ -11,15 +11,13 @@ image::retail_ref_arch.png[scaledwidth=80%]
 
 
 
-[[retail.sect.components.central-server]]
-== {susemgr} Server
+== The {susemgr} Server
 
 The {susemgr} server contains information about infrastructure, network topology, and everything required to automate image deployment and perform day-to-day operations on branches and terminals.
 This can include database entries of registered systems, Salt pillar data for images, image assignments, partitioning, network setup, network services, and more.
 
 
 
-[[retail.sect.components.build-hosts]]
 == Build Hosts
 
 Build hosts can be arbitrary servers or virtual machines.
@@ -29,7 +27,6 @@ Build hosts should be based on {sls}{nbsp}12 SP3 or SP4.
 
 
 
-[[retail.sect.components.branch-server]]
 == Branch Server
 
 Branch servers should be physically located close to point-of-service terminals, such as in an individual store or branch office.
@@ -49,7 +46,6 @@ For technical background information on {smr} Branch servers, see also the docum
 
 
 
-[[retail.sect.components.pos-terminals]]
 == Point-of-Service Terminals
 
 Point-of-Service (PoS) terminals can come in many different formats, such as point-of-sale terminals, kiosks, digital scales, self-service systems, and reverse-vending systems.
@@ -76,14 +72,12 @@ For more information on EFI in the Saltboot formula, see xref:retail:retail-form
 
 
 
-[[retail.sect.components.fitting]]
 == Fitting It All Together
 
 {smr} uses the same technology as {susemgr}, but is customized to address the needs of retail organizations.
 
 
 
-[[retail.sect.components.fitting.hardware-types]]
 === Hardware Types
 
 Because every environment is different, and can contain many different configurations of many different terminals, {smr} uses hardware types to simplify device management.
@@ -93,7 +87,16 @@ Then all devices of a particular type can be managed as one.
 
 
 
-[[retail.sect.components.fitting.formulas]]
+=== System groups
+
+{smr} uses system groups to organize the various devices in your environment.
+
+Each branch requires a system group, containing a single branch server, and the PoS terminals associated with that server.
+Each system group is identified with a Branch ID.
+The Branch ID is used in formulas and scripts to automatically update the entire group.
+
+
+
 === Salt Formulas
 
 {smr} uses Salt formulas to help simplify configuration.
@@ -104,15 +107,33 @@ You can use formulas to apply configuration patterns to your hardware groups.
 
 You can use default settings for formulas, or edit them to make them more specific to your environment.
 
-For more information about formulas, see xref:retail:retail-formulas.adoc[].
+For more information about formulas, see xref:retail:retail-formulas-intro.adoc[].
 
 
 
-[[retail.sect.components.fitting.system-groups]]
-=== System groups
+=== Saltboot
 
-{smr} uses system groups to organize the various devices in your environment.
+Saltboot is a collection of tools and processes that are used to bootstrap, deploy and validate {smr} terminals.
 
-Each branch requires a system group, containing a single branch server, and the PoS terminals associated with that server.
-Each system group is identified with a Branch ID.
-The Branch ID is used in formulas and scripts to automatically update the entire group.
+Saltboot consists of:
+
+* Initialization service:
++
+The Saltboot ``initrd`` service is created during image building and is required for bootstrapping terminals.
+
+* Saltboot state:
++
+The Salt state that contains the logic for the entire saltboot process.
+
+* Partitioning pillars:
++
+The Salt pillar structure that describes how terminals are partitioned and what image is deployed on each terminal.
+
+* Images and bootimages pillars:
++
+These Salt pillars are generated after the Saltboot ``initrd`` service has successfully built an image.
+This pillar is generated with the image building feature in {productname}.
+
+The saltboot process involves the {productname} Server, a terminal running the saltboot ``initrd``, and the branch server providing the saltboot services to the terminal.
+
+For a detailed diagram explaining how the Saltboot boot process works, see xref:retail:retail-saltboot-diagram.adoc[].
