--- a/modules/administration/pages/maintenance-window.adoc
+++ b/modules/administration/pages/maintenance-window.adoc
@@ -1,33 +1,39 @@
 [[maintenance-window]]
-= Maintenance Window Checklist
+= {productname} Maintenance Window
 
-If you work on a {productname} Server with scheduled maintenance windows, you might find it difficult to remember all the things that you need to during that critical downtime.
+If you work with scheduled maintenance windows, you might find it difficult to remember all the things that you need to do before, during, and after that critical downtime of the {productname} Server.
+{productname} Server related systems such as Inter-Server Synchronization Slave Servers or {productname} Proxies are also affected and have do be considered.
 
-As with any {sle} system, you are encouraged to install package updates on the {susemgr} Server when they arrive.
+{suse} recommends to keep the {productname} infrastructure (servers, proxies, build hosts, etc.) always up-to-date.
+Because the {productname} Server is needed to update all your IT landscape, the server must always be updated.
+// It's similar to zypper at the package level:
+You must keep it up-to-date or you will risk not being able to update something else successfully!
+
+
+
+== {productname} Server
 
 This section contains a checklist for your maintenance window, with links to further information on performing each of the steps, if you need it.
 
-
-. Stop services.
-You will need to stop the spacewalk, SAP, and database services, along with any others you have running.
+// ke, 2019-09-30: we'll stop spacewalk during the update
+// . Stop spacewalk services.
+// You will need to stop the spacewalk, SAP, and database services, along with any others you have running.
 . Check if the configuration is still correct.
-. On Salt systems, apply the highstate.
 . Apply the latest updates.
 See xref:upgrade:server-update.adoc[].
 . Update to the latest service pack, if required.
 See xref:upgrade:migrate-4x-4x.adoc[].
 . Reboot the server.
 . Check if the configuration is still correct.
-. On Salt systems, apply the highstate.
-. Start any stopped services.
+// . Start any stopped services.
 
+For information about database schema upgrades and PostgreSQL migrations, see xref:upgrades:db-migration.adoc[].
 
 You can install updates using your package manager.
 For information on using {yast}, see https://www.suse.com/documentation/sles-15/book_sle_admin/data/cha_onlineupdate_you.html).
 For information on using zypper, see https://www.suse.com/documentation/sles-15/book_sle_admin/data/sec_zypper.html).
 
 ////
-
 Preferable, you will run such a tool within a maintenance window; for more information, see xref:administration:maintenance-window.adoc#maintenance-window[].
 
  complete procedure, also see above:
@@ -44,7 +50,7 @@ Preferable, you will run such a tool within a maintenance window; for more infor
 By default, several update channels are configured and enabled for the {susemgr} Server.
 New and updated packages will become available automatically.
 
-To keep {susemgr} up to date, you must have it connected directly to {scc}.
+To keep {susemgr} up to date, you must have it connected directly to {scc}.
 Alternatively, for disconnected environments, you can use {rmtool} (RMT) as a local installation source.
 
 You can check that the update channels are available on your system with this command:
@@ -86,3 +92,16 @@ zypper migration
 ----
 
 This procedure is also known as a Service Pack (SP) migration.
+
+
+
+== Inter-Server Synchronization Slave Server
+
+Inter-server synchronization slave servers should be updated as soon as
+the update of the main server (master server) is completed.
+
+
+
+== {productname} Proxy
+
+Proxies should be updated after all Server updates are complete.
