--- a/modules/reference/pages/command-line-tools.adoc
+++ b/modules/reference/pages/command-line-tools.adoc
@@ -695,6 +695,82 @@ Show help message and exit.
 
 
 
+[[spacewalk-repo-sync]]
+== Synchronize Repositories with spacewalk-repo-sync
+
+The [command]``spacewalk-repo-sync`` tool synchronizes software repositories into {productname} channels.
+This usually happens automatically, but you can run it manually if required.
+This can be useful for debugging or for solving some synchronization problems.
+
+
+
+=== Normal Channel Synchronization
+
+Basic operation:
+
+[command]``spacewalk-repo-sync --list``::
+List all custom channels and the repositories assigned to them.
+[command]``spacewalk-repo-sync  --channel <custom-channel>``::
+Synchronize a single channel ``<custom-channel>`` to all repositories assigned to it with the {webui} or the API.
+
+
+
+=== Solve Checksum Problems
+
+Use the [option]``--deep-verify`` option to ignore cached package checksums.
+This can help with solving checksum problems.
+
+
+
+=== Force Re-import Patches
+
+Use the [option]``--force-all-errata`` option to force re-importing all the patches.
+To make this command run faster, you can use the [option]``--no-packages`` option.
+This option excludes packages from the operation.
+
+To find the root cause of synchronization problems you can look at the HTTP log as [command]``spacewalk-repo-sync`` is running.
+
+. Set and export [systemitem]``ZYPP_MEDIA_CURL_DEBUG``.
+This setting will allow downloading the metadata output by Zypper.
+Thus the following command will log the HTTP conversation into [path]``/var/log/zypper.log``:
++
+
+----
+ZYPP_MEDIA_CURL_DEBUG=2 spacewalk-repo-sync --channel <channel-label>
+----
+
+. Set and export [systemitem]``URLGRABBER_DEBUG`` for the RPM downloading part:
++
+----
+export URLGRABBER_DEBUG=DEBUG
+----
+. Start the synchronization:
++
+
+----
+/usr/bin/spacewalk-repo-sync --channel <channel-label> --type yum
+----
+
+To increase the debug level, add the [option]``-vvv`` option.
+
+When debugging is finished, disable debug mode:
+
+----
+unset URLGRABBER_DEBUG
+----
+
+
+
+=== For More Information
+
+For a complete list of command line options, see the [command]``spacewalk-repo-sync`` manpage:
+
+----
+man spacewalk-repo-sync
+----
+
+
+
 [[syncing.suse.mgr.repositories.scc]]
 == Synchronize SUSE Manager Repositories from SCC (mgr-sync)
 
