--- a/modules/administration/pages/maintenance-window.adoc
+++ b/modules/administration/pages/maintenance-window.adoc
@@ -4,7 +4,7 @@
 If you work with scheduled maintenance windows, you might find it difficult to remember all the things that you need to do before, during, and after that critical downtime of the {productname} Server.
 {productname} Server related systems such as Inter-Server Synchronization Slave Servers or {productname} Proxies are also affected and have to be considered.
 
-{suse} recommends to keep the {productname} infrastructure (servers, proxies, build hosts, etc.) always up-to-date.
+{suse} recommends to keep the {productname} infrastructure (Servers, Proxies, build hosts, etc.) always up-to-date.
 Because the {productname} Server is needed to update all your IT landscape, the server must always be updated.
 // It's similar to zypper at the package level:
 You must keep it up-to-date or you will risk not being able to update something else successfully!
