--- a/modules/administration/pages/maintenance-window.adoc
+++ b/modules/administration/pages/maintenance-window.adoc
@@ -13,7 +13,7 @@ You must keep it up-to-date or you will risk not being able to update something 
 
 == {productname} Server
 
-This section contains a checklist for your maintenance window, with links to further information on performing each of the steps, if you need it.
+This section contains a checklist for your maintenance window, with links to further information on performing each of the steps.
 
 // ke, 2019-09-30: we'll stop spacewalk during the update
 // . Stop spacewalk services.
