--- a/modules/administration/pages/maintenance-window.adoc
+++ b/modules/administration/pages/maintenance-window.adoc
@@ -18,13 +18,13 @@ This section contains a checklist for your maintenance window, with links to fur
 // ke, 2019-09-30: we'll stop spacewalk during the update
 // . Stop spacewalk services.
 // You will need to stop the spacewalk, SAP, and database services, along with any others you have running.
-. Check if the configuration is still correct.
+// . Check if the configuration is still correct.
 . Apply the latest updates.
 See xref:upgrade:server-update.adoc[].
 . Update to the latest service pack, if required.
 See xref:upgrade:migrate-4x-4x.adoc[].
 . Reboot the server.
-. Check if the configuration is still correct.
+// . Check if the configuration is still correct.
 // . Start any stopped services.
 
 For information about database schema upgrades and PostgreSQL migrations, see xref:upgrades:db-migration.adoc[].
