--- a/modules/upgrade/pages/migrate-4x-4x.adoc
+++ b/modules/upgrade/pages/migrate-4x-4x.adoc
@@ -27,6 +27,7 @@ yast2 migration
 {yast} will show the possible migration targets with detailed summaries.
 // I've removed the graphical option, because we tell people to use a text console. LKB 2019-08-21
 . Select the appropriate target, and follow the prompts to complete the migration.
+. Reboot the server.
 . Ensure the spacewalk services are running:
 +
 ----
@@ -65,6 +66,7 @@ zypper migration
 ----
 Zypper will show the possible migration targets with detailed summaries.
 . Select the appropriate target, and follow the prompts to complete the migration.
+. Reboot the server.
 . Ensure the spacewalk services are running:
 +
 ----
