--- a/modules/upgrade/pages/server-update.adoc
+++ b/modules/upgrade/pages/server-update.adoc
@@ -49,3 +49,5 @@ Services affected by a package update are not automatically restarted after an u
 You need to restart these services manually to avoid potential failures.
 Use [command]``zypper ps`` to check for applications that are using old code and require restarting.
 ====
+
+Reboot the server if a patch update recommends rebooting.
