--- a/modules/administration/pages/maintenance-window.adoc
+++ b/modules/administration/pages/maintenance-window.adoc
@@ -23,7 +23,8 @@ This section contains a checklist for your maintenance window, with links to fur
 See xref:upgrade:server-update.adoc[].
 . Update to the latest service pack, if required.
 See xref:upgrade:migrate-4x-4x.adoc[].
-. Reboot the server.
+// We reboot during the above listed procedures.
+// . Reboot the server.
 // . Check if the configuration is still correct.
 // . Start any stopped services.
 
