--- a/modules/administration/pages/auth-methods.adoc
+++ b/modules/administration/pages/auth-methods.adoc
@@ -44,7 +44,7 @@ It is below the password and password confirmation fields.
 [IMPORTANT]
 ====
 Changing the password in the {productname} {webui} changes only the local password on the {productname} Server.
-If PAM is enabled for that user, this password might not be used at all.
+If PAM is enabled for that user, the local password might not be used at all.
 In the above example, for instance, the Kerberos password will not be changed.
 Use the password change mechanism of your network service to change the password for these users.
 ====
