--- a/modules/administration/pages/maintenance-window.adoc
+++ b/modules/administration/pages/maintenance-window.adoc
@@ -51,8 +51,8 @@ Preferable, you will run such a tool within a maintenance window; for more infor
 By default, several update channels are configured and enabled for the {susemgr} Server.
 New and updated packages will become available automatically.
 
-To keep {susemgr} up to date, you must have it connected directly to {scc}.
-Alternatively, for disconnected environments, you can use {rmtool} (RMT) as a local installation source.
+To keep {susemgr} up to date, either connect it directly to {scc} or use {rmtool} (RMT).
+You can use RMT as a local installation source for disconnected environments.
 
 You can check that the update channels are available on your system with this command:
 
