stronger wording (per feedback)

--- a/modules/upgrade/pages/migrate-4x-4x.adoc
+++ b/modules/upgrade/pages/migrate-4x-4x.adoc
@@ -78,4 +78,4 @@ If the process fails, check these issues first:
 
 * If Zypper does not have the migration tool available, install the [package]``zypper-migration-plugin`` package.
 * If there are older updates available, Zypper will notify you and ask to install them first.
-We strongly recommend you install all updates before performing the migration.
+You must install all updates before performing the migration.
