--- a/modules/administration/pages/maintenance-window.adoc
+++ b/modules/administration/pages/maintenance-window.adoc
@@ -105,4 +105,5 @@ the update of the main server (master server) is completed.
 
 == {productname} Proxy
 
-Proxies should be updated after all Server updates are complete.
+Proxies should be updated after all server updates are complete.
+Especially in a version 3.2 to 4.0 migration you should upgrade the server first, then any proxy.
