refere to proxy-migration.adoc and proxy-update.adoc

--- a/modules/administration/pages/maintenance-window.adoc
+++ b/modules/administration/pages/maintenance-window.adoc
@@ -107,3 +107,4 @@ the update of the main server (master server) is completed.
 
 Proxies should be updated after all server updates are complete.
 Especially in a version 3.2 to 4.0 migration you should upgrade the server first, then any proxy.
+For more information, see xref:upgrade:proxy-update.adoc[] and xref:upgrade:proxy-migration.adoc[].
