--- a/modules/upgrade/pages/migrate-4x-4x.adoc
+++ b/modules/upgrade/pages/migrate-4x-4x.adoc
@@ -21,9 +21,12 @@ To perform the migration with {yast}, use the Online Migration tool.
 
 . From the command prompt, as root, launch the {yast} online migration tool:
 +
+
 ----
 yast2 migration
 ----
++
+
 {yast} will show the possible migration targets with detailed summaries.
 // I've removed the graphical option, because we tell people to use a text console. LKB 2019-08-21
 . Select the appropriate target, and follow the prompts to complete the migration.
@@ -39,11 +42,14 @@ If the process fails, check these issues first:
 * If {yast} does not have the online migration module available, install the [package]``yast2-migration`` package.
 After installing, restart {yast} to ensure the module is available.
 * If there are older updates available, {yast} will notify you and ask to install them first.
-We strongly recommend you install all updates before performing the migration.
+You must install all updates before performing the migration.
 
+// Does this also apply if you use zypper?  If yes, we must repeat this
+// sentence below.
 During the migration, {yast} will install all recommended packages.
 This can significantly increase the installation size of the system.
 To only install required packages, open the [path]``/etc/zypp/zypp.conf`` configuration file and set these variables:
+
 ----
 solver.onlyRequires = true
 installRecommends = false
