more mostly minor things (per feedback)

--- a/modules/administration/pages/maintenance-window.adoc
+++ b/modules/administration/pages/maintenance-window.adoc
@@ -26,6 +26,7 @@ See xref:upgrade:migrate-4x-4x.adoc[].
 // . Reboot the server.
 // . Check if the configuration is still correct.
 // . Start any stopped services.
+. Run [command]``spacewalk-service status`` and check whether all required services are up and running.
 
 For information about database schema upgrades and PostgreSQL migrations, see xref:upgrades:db-migration.adoc[].
 
