--- a/modules/upgrade/pages/migrate-4x-4x.adoc
+++ b/modules/upgrade/pages/migrate-4x-4x.adoc
@@ -26,7 +26,13 @@ To perform the migration with {yast}, use the Online Migration tool.
 yast2 migration
 ----
 +
-
+////
+TODO:
+2019-10-01, ke:
+With the advent of SLE 15 SP2 or SUMA 4.1 we probably must enhance this;
+For more info, see the maintenance/3.2 branch!
+Enhance the zypper section below accordingly
+////
 {yast} will show the possible migration targets with detailed summaries.
 // I've removed the graphical option, because we tell people to use a text console. LKB 2019-08-21
 . Select the appropriate target, and follow the prompts to complete the migration.
