--- a/modules/administration/pages/maintenance-window.adoc
+++ b/modules/administration/pages/maintenance-window.adoc
@@ -96,6 +96,17 @@ This procedure is also known as a Service Pack (SP) migration.
 
 
 
+=== Refreshing Client Tools After Server Update
+
+When the server is updated consider to update some tools on the clients, too.
+Updating salt-minion, zypper and any other related management package on clients is not a strict requirement, but it is a best practice in general.
+For example, a maintenance update on the Server might introduce a major new Salt version.
+Then minions will continue to work but might experience problems later on.
+To avoid this always update the salt-minion package when available.
+{suse} makes sure that salt-minion can always be updated safely.
+
+
+
 == Inter-Server Synchronization Slave Server
 
 Inter-server synchronization slave servers should be updated as soon as
