--- a/modules/administration/pages/maintenance-window.adoc
+++ b/modules/administration/pages/maintenance-window.adoc
@@ -99,11 +99,11 @@ This procedure is also known as a Service Pack (SP) migration.
 === Refreshing Client Tools After Server Update
 
 When the server is updated consider to update some tools on the clients, too.
-Updating salt-minion, zypper and any other related management package on clients is not a strict requirement, but it is a best practice in general.
-For example, a maintenance update on the Server might introduce a major new Salt version.
+Updating [package]``salt-minion``, [package]``zypper``, and other related management package on clients is not a strict requirement, but it is a best practice in general.
+For example, a maintenance update on the server might introduce a major new Salt version.
 Then minions will continue to work but might experience problems later on.
 To avoid this always update the salt-minion package when available.
-{suse} makes sure that salt-minion can always be updated safely.
+{suse} makes sure that [package]``salt-minion`` can always be updated safely.
 
 
 
