IMO,  you do not deploy MUs with 'zypper migration'

--- a/modules/administration/pages/maintenance-window.adoc
+++ b/modules/administration/pages/maintenance-window.adoc
@@ -86,13 +86,13 @@ For example, the major release 4.0 will be incremented to 4.0.1 when an MU is re
 You can verify which version you are running by looking at the bottom of the navigation bar in the {webui}.
 You can also fetch the version number with the [literal]``api.getVersion()`` XMLRPC API call.
 
-To upgrade to the latest MU, you can use the [command]``zypper migration`` command at the command prompt:
-
-----
-zypper migration
-----
-
-This procedure is also known as a Service Pack (SP) migration.
+// To upgrade to the latest MU, you can use the [command]``zypper migration`` command at the command prompt:
+// 
+// ----
+// zypper migration
+// ----
+// 
+// This procedure is also known as a Service Pack (SP) migration.
 
 
 
