edits per feedback

--- a/modules/retail/pages/retail-components.adoc
+++ b/modules/retail/pages/retail-components.adoc
@@ -87,7 +87,7 @@ Then all devices of a particular type can be managed as one.
 
 
 
-=== System groups
+=== Branch System Groups
 
 {smr} uses system groups to organize the various devices in your environment.
 
@@ -117,9 +117,9 @@ Saltboot is a collection of tools and processes that are used to bootstrap, depl
 
 Saltboot consists of:
 
-* Initialization service:
+* Initialization:
 +
-The Saltboot ``initrd`` service is created during image building and is required for bootstrapping terminals.
+The saltboot ``initrd`` is created during image building and is required for bootstrapping terminals.
 
 * Saltboot state:
 +
@@ -129,11 +129,11 @@ The Salt state that contains the logic for the entire saltboot process.
 +
 The Salt pillar structure that describes how terminals are partitioned and what image is deployed on each terminal.
 
-* Images and bootimages pillars:
+* Images and boot images pillars:
 +
-These Salt pillars are generated after the Saltboot ``initrd`` service has successfully built an image.
-This pillar is generated with the image building feature in {productname}.
+These Salt pillars are generated after saltboot has successfully built an image.
+They are generated with the image building feature in {productname}.
 
 The saltboot process involves the {productname} Server, a terminal running the saltboot ``initrd``, and the branch server providing the saltboot services to the terminal.
 
-For a detailed diagram explaining how the Saltboot boot process works, see xref:retail:retail-saltboot-diagram.adoc[].
+For a detailed diagram explaining how the saltboot boot process works, see xref:retail:retail-saltboot-diagram.adoc[].
