--- a/modules/administration/pages/tshoot-osadjabberd.adoc
+++ b/modules/administration/pages/tshoot-osadjabberd.adoc
@@ -34,26 +34,39 @@ In this case, we recommend you consider using Salt clients instead.
 For more information about tuning large scale installations, see xref:salt:large-scale.adoc[].
 ====
 
-You can increase the number of files available to jabber by editing the [systemitem]``LimitNOFILE`` service file in [command]``systemd``:
+You can increase the number of files available to jabber by editing the jabberd local configuration file.
+By default, the file is located at [path]``/etc/systemd/system/jabberd.service.d/override.conf``.
 
-As root, edit the [path]``/usr/lib/systemd/system/jabberd.service/local.conf`` file.
-Add or edit this section:
+.Procedure: Adjusting the Maximum File Count
 
+. At the command prompt, as root, open the local configuration file for editing:
++
+----
+systemctl edit jabberd
+----
+. Add or edit this section:
++
 ----
 [Unit]
 LimitNOFILE=
 LimitNOFILE=<soft_limit>:<hard_limit>
 ----
-
++
 The value you choose will vary depending on your environment.
 For example, if you have 5000 clients, increase the soft value by 100 to 5100, and the hard value by 1000 to 6000:
-
++
 ----
 [Unit]
 LimitNOFILE=
 LimitNOFILE=5100:6000
 ----
+. Save the file and exit the editor.
 
+[NOTE]
+====
+The default editor for systemctl files is vim.
+To save the file and exit, press kbd:[Esc] to enter ``normal`` mode, type kbd:[:wq] and press kbd:[Enter].
+====
 
 Ensure you also update the `max_fds` parameter in [path]``/etc/jabberd/c2s.xml``.
 For example: `<max_fds>6000</max_fds>`
