--- a/modules/administration/pages/tshoot-osadjabberd.adoc
+++ b/modules/administration/pages/tshoot-osadjabberd.adoc
@@ -49,7 +49,7 @@ systemctl edit jabberd
 . Add or edit this section:
 +
 ----
-[Unit]
+[Service]
 LimitNOFILE=
 LimitNOFILE=<soft_limit>:<hard_limit>
 ----
