initial add: missing reports

--- a/modules/administration/pages/reports.adoc
+++ b/modules/administration/pages/reports.adoc
@@ -29,9 +29,18 @@ This table lists the available reports:
 [cols="1,1,1", options="header"]
 |===
 |Report | Invoked as | Description
+|  | [command]``actions`` |
+|  | [command]``activation-keys`` |
+|  | [command]``activation-keys-channels`` |
+|  | [command]``activation-keys-config`` |
+|  | [command]``activation-keys-groups`` |
+|  | [command]``activation-keys-packages`` |
 | Channel Packages | [command]``channel-packages`` | All packages in a channel.
 | Channel Report | [command]``channels`` | Detailed report of a given channel.
 | Cloned Channel Report | [command]``cloned-channels`` | Detailed report of cloned channels.
+|  | [command]``config-files`` |
+|  | [command]``config-files-latest`` |
+|  | [command]``custom-channels`` |
 | Custom Info | [command]``custom-info`` | System custom information.
 | Entitlements | [command]``entitlements`` | All organizations, and their system or channel entitlements.
 | Patches in Channels | [command]``errata-channels`` | All patches in channels.
@@ -41,18 +50,36 @@ This table lists the available reports:
 | Host Guests | [command]``host-guests`` | Host and guests mapping.
 | Inactive Systems | [command]``inactive-systems`` | Inactive systems.
 | System Inventory | [command]``inventory`` | Systems registered to the server, together with hardware and software information.
+|  | [command]``kickstart-scripts`` |
 | Kickstart Trees | [command]``kickstartable-trees`` | Kickstartable trees.
 | All Upgradable Versions | [command]``packages-updates-all`` | All newer package versions that can be upgraded.
 | Newest Upgradable Version | [command]``packages-updates-newest`` | Newest package versions that can be upgraded.
+|  | [command]``proxies-overview`` |
+|  | [command]``repositories`` |
 | Result of SCAP | [command]``scap-scan`` | Result of OpenSCAP ``sccdf`` evaluations.
 | Result of SCAP | [command]``scap-scan-results`` | Result of OpenSCAP ``sccdf`` evaluations, in a different format.
 | System Data | [command]``splice-export`` | System data needed for splice integration.
+|  | [command]``system-crash-count`` |
+|  | [command]``system-crash-details`` |
+|  | [command]``system-currency`` |
+|  | [command]``system-extra-packages`` |
 | System Groups | [command]``system-groups`` | System groups.
 | Activation Keys for System Groups | [command]``system-groups-keys`` | Activation keys for system groups.
 | Systems in System Groups | [command]``system-groups-systems`` | Systems in system groups.
 | System Groups Users | [command]``system-groups-users`` | Report of system groups users.
+|  | [command]``system-history`` |
+|  | [command]``system-history-channels`` |
+|  | [command]``system-history-configuration`` |
+|  | [command]``system-history-entitlements`` |
+|  | [command]``system-history-errata`` |
+|  | [command]``system-history-kickstart`` |
+|  | [command]``system-history-packages`` |
+|  | [command]``system-history-scap`` |
+|  | [command]``system-md5-certificates`` |
 | Installed Packages | [command]``system-packages-installed`` | Packages installed on systems.
+|  | [command]``system-profiles`` |
 | Users in the System | [command]``users`` | All users registered to {productname}.
+|  | [command]``users-md5`` |
 | Systems administered | [command]``users-systems`` | Systems that individual users can administer.
 |===
 
