add missing reports

--- a/modules/administration/pages/reports.adoc
+++ b/modules/administration/pages/reports.adoc
@@ -29,18 +29,18 @@ This table lists the available reports:
 [cols="1,1,1", options="header"]
 |===
 |Report | Invoked as | Description
-|  | [command]``actions`` |
-|  | [command]``activation-keys`` |
-|  | [command]``activation-keys-channels`` |
-|  | [command]``activation-keys-config`` |
-|  | [command]``activation-keys-groups`` |
-|  | [command]``activation-keys-packages`` |
+| Actions | [command]``actions`` | All actions.
+| Activation Keys | [command]``activation-keys`` | All activation keys, and the entitlements, channels, configuration channels, server groups, and packages associated with them.
+| Activation Keys: Channels | [command]``activation-keys-channels`` | All activation keys and the entities associated with each key.
+| Activation Keys: Configuration | [command]``activation-keys-config`` | All activation keys and the configuration channels associated with each key.
+| Activation Keys: Server Groups | [command]``activation-keys-groups`` | All activation keys and the server groups associated with each key.
+| Activation Keys: Packages | [command]``activation-keys-packages`` | All activation keys and the packages each key can deploy.
 | Channel Packages | [command]``channel-packages`` | All packages in a channel.
 | Channel Report | [command]``channels`` | Detailed report of a given channel.
 | Cloned Channel Report | [command]``cloned-channels`` | Detailed report of cloned channels.
-|  | [command]``config-files`` |
-|  | [command]``config-files-latest`` |
-|  | [command]``custom-channels`` |
+| Configuration Files | [command]``config-files`` | All configuration file revisions for all organizations, including  file contents and file information.
+| Latest Configuration Files | [command]``config-files-latest`` | The most recent configuration file revisions for all organizations, including  file contents and file information.
+| Custom Channels | [command]``custom-channels`` | Channel-meta-data for all channels owned by specific organizations
 | Custom Info | [command]``custom-info`` | System custom information.
 | Entitlements | [command]``entitlements`` | All organizations, and their system or channel entitlements.
 | Patches in Channels | [command]``errata-channels`` | All patches in channels.
@@ -50,36 +50,36 @@ This table lists the available reports:
 | Host Guests | [command]``host-guests`` | Host and guests mapping.
 | Inactive Systems | [command]``inactive-systems`` | Inactive systems.
 | System Inventory | [command]``inventory`` | Systems registered to the server, together with hardware and software information.
-|  | [command]``kickstart-scripts`` |
+| Kickstart Scripts | [command]``kickstart-scripts`` | All kickstart scripts, with details.
 | Kickstart Trees | [command]``kickstartable-trees`` | Kickstartable trees.
 | All Upgradable Versions | [command]``packages-updates-all`` | All newer package versions that can be upgraded.
 | Newest Upgradable Version | [command]``packages-updates-newest`` | Newest package versions that can be upgraded.
-|  | [command]``proxies-overview`` |
-|  | [command]``repositories`` |
+| Proxy Overview | [command]``proxies-overview`` | All proxies and the servers registered with each.
+| Repositories | [command]``repositories`` | All repositories, with their associated SSL details, and any filters.
 | Result of SCAP | [command]``scap-scan`` | Result of OpenSCAP ``sccdf`` evaluations.
 | Result of SCAP | [command]``scap-scan-results`` | Result of OpenSCAP ``sccdf`` evaluations, in a different format.
 | System Data | [command]``splice-export`` | System data needed for splice integration.
-|  | [command]``system-crash-count`` |
-|  | [command]``system-crash-details`` |
-|  | [command]``system-currency`` |
-|  | [command]``system-extra-packages`` |
+| System Crash: Count | [command]``system-crash-count`` | The total number of system crashes.
+| System Crash: Details | [command]``system-crash-details`` | Crash details for all systems.
+| System Currency | [command]``system-currency`` | Number of available errata for each registered system.
+| System Extra Packages | [command]``system-extra-packages`` | All packages installed on all systems that are not available from channels the system is subscribed to.
 | System Groups | [command]``system-groups`` | System groups.
 | Activation Keys for System Groups | [command]``system-groups-keys`` | Activation keys for system groups.
 | Systems in System Groups | [command]``system-groups-systems`` | Systems in system groups.
 | System Groups Users | [command]``system-groups-users`` | Report of system groups users.
-|  | [command]``system-history`` |
-|  | [command]``system-history-channels`` |
-|  | [command]``system-history-configuration`` |
-|  | [command]``system-history-entitlements`` |
-|  | [command]``system-history-errata`` |
-|  | [command]``system-history-kickstart`` |
-|  | [command]``system-history-packages`` |
-|  | [command]``system-history-scap`` |
-|  | [command]``system-md5-certificates`` |
+| History: System | [command]``system-history`` | Event history for each system.
+| History: Channels | [command]``system-history-channels`` | Channel event history.
+| History: Configuration | [command]``system-history-configuration`` | Configuration event history.
+| History: Entitlements | [command]``system-history-entitlements`` | System entitlement event history.
+| History: Errata | [command]``system-history-errata`` | Errata event history.
+| History: Kickstart | [command]``system-history-kickstart`` | Kickstart event history.
+| History: Packages | [command]``system-history-packages`` | Package event history.
+| History: SCAP | [command]``system-history-scap`` | OpenSCAP event history.
+| MD5 Certificates | [command]``system-md5-certificates`` | All registered systems using certificates with an MD5 checksum.
 | Installed Packages | [command]``system-packages-installed`` | Packages installed on systems.
-|  | [command]``system-profiles`` |
+| System Profiles | [command]``system-profiles`` | All systems registered to the server, with software and system group information.
 | Users in the System | [command]``users`` | All users registered to {productname}.
-|  | [command]``users-md5`` |
+| MD5 Users | [command]``users-md5`` | All users for all organizations using MD5 encrypted passwords, with their details and roles.
 | Systems administered | [command]``users-systems`` | Systems that individual users can administer.
 |===
 
