--- a/modules/client-configuration/pages/contact-methods-osad.adoc
+++ b/modules/client-configuration/pages/contact-methods-osad.adoc
@@ -86,7 +86,8 @@ jabbersoftnofile5100
 jabberhardnofile6000
 ----
 
-Calculate the limits required for your environment by adding 100 to the number of clients for the soft limit, and 1000 to the current number of clients for the soft limit.
+Calculate the limits required for your environment by adding 100 to the number of clients for the soft limit, and 1000 to the current number of clients for the hard limit.
+
 In the example above, we have assumed 500 current clients, so the soft limit is 5100, and the hard limit is 6000.
 
 You will also need to update the [systemitem]``max_fds`` parameter in the [path]``/etc/jabberd/c2s.xml`` file with your chosen hard limit:
