--- a/modules/client-configuration/pages/contact-methods-pushssh.adoc
+++ b/modules/client-configuration/pages/contact-methods-pushssh.adoc
@@ -58,7 +58,7 @@ For security reasons, you might want to use sudo with SSH, to access the system 
 
 .Procedure: Configuring Unprivileged SSH Access
 . Ensure you have the latest [path]``spacewalk-taskomatic`` and [path]``spacewalk-certs-tools`` packages installed on the {productname} Server.
-. On each client system, create an appropriate unprivileged user on each client system.
+. On each client system, create an appropriate unprivileged user.
 . On each client system, open the [path]``/etc/sudoers`` file and comment out these lines:
 +
 ----
