--- a/modules/client-configuration/pages/using-ssm.adoc
+++ b/modules/client-configuration/pages/using-ssm.adoc
@@ -14,7 +14,7 @@ You need to select which systems or system group you want to work with before yo
 
 You can access SSM in three different ways:
 
-* Navigating to menu:Systems[System List] and with one of the sub-menus selecting systems you want to work with.  Then navigating to menu:Systems[System Set Manager].
+* Navigate to menu:Systems[System List], select systems you want to work with, and navigate to menu:Systems[System Set Manager].
 * Navigating to menu:Systems[System Groups] and clicking btn:[Use in SSM] for the system group you want to work with.
 * Navigating to menu:Systems[System Groups], selecting the group you want to work with, and clicking btn:[Work with Group].
 
