--- a/modules/client-configuration/pages/using-ssm.adoc
+++ b/modules/client-configuration/pages/using-ssm.adoc
@@ -15,7 +15,7 @@ You need to select which systems or system group you want to work with before yo
 You can access SSM in three different ways:
 
 * Navigate to menu:Systems[System List], select systems you want to work with, and navigate to menu:Systems[System Set Manager].
-* Navigating to menu:Systems[System Groups] and clicking btn:[Use in SSM] for the system group you want to work with.
+* Navigate to menu:Systems[System Groups], and click btn:[Use in SSM] for the system group you want to work with.
 * Navigating to menu:Systems[System Groups], selecting the group you want to work with, and clicking btn:[Work with Group].
 
 
