--- a/modules/client-configuration/pages/using-ssm.adoc
+++ b/modules/client-configuration/pages/using-ssm.adoc
@@ -16,7 +16,7 @@ You can access SSM in three different ways:
 
 * Navigate to menu:Systems[System List], select systems you want to work with, and navigate to menu:Systems[System Set Manager].
 * Navigate to menu:Systems[System Groups], and click btn:[Use in SSM] for the system group you want to work with.
-* Navigating to menu:Systems[System Groups], selecting the group you want to work with, and clicking btn:[Work with Group].
+* Navigate to menu:Systems[System Groups], select the group you want to work with, and click btn:[Work with Group].
 
 
 
