--- a/README.adoc
+++ b/README.adoc
@@ -44,6 +44,7 @@ endif::[]
 :sourcedir: .
 :imagesdir: images
 
+image:https://travis-ci.org/SUSE/doc-susemanager.svg?branch=master["Build Status", link="https://travis-ci.org/SUSE/doc-susemanager"]
 
 [suma.doc.intro]
 == Introduction
