--- a/modules/retail/pages/retail-components.adoc
+++ b/modules/retail/pages/retail-components.adoc
@@ -131,8 +131,8 @@ The Salt pillar structure that describes how terminals are partitioned and what 
 
 * Images and boot images pillars:
 +
-These Salt pillars are generated after saltboot has successfully built an image.
-They are generated with the image building feature in {productname}.
+When the image building feature in {productname} successfully builds an image that contains the saltboot ``initrd``, the image and boot image Salt pillars are created.
+
 
 The saltboot process involves the {productname} Server, a terminal running the saltboot ``initrd``, and the branch server providing the saltboot services to the terminal.
 
