--- a/modules/installation/pages/general-requirements.adoc
+++ b/modules/installation/pages/general-requirements.adoc
@@ -49,7 +49,7 @@ Depending on your organization's setup, you might also need to activate your sub
 
 //REMARK What about Uyuni?
 ifeval::[{suma-content} == true]
-You only require a valid registration code for {productname}. 
+You only require a valid registration code for {productname}.
 You do not require a separate code for {slsa}{nbsp}{sles-version} {sp-version}.
 endif::[]
 
@@ -72,3 +72,41 @@ In order to use the {webui} to manage your {susemgr} environment, you will need 
 
 Windows Internet Explorer is not supported.
 The {productname} {webui} will not render correctly under Windows Internet Explorer.
+
+
+
+== Partition Permissions
+
+When you create disk partitions for the {productname} Server and Proxy, ensure you set the permissions correctly.
+
+For [path]``/var/lib/pgsql``:
+
+* Owner: Read, Write, Execute
+* Group: Read, Execute
+* User: None
+
+For [path]``/var/spacewalk``:
+
+* Owner: Read, Write, Execute
+* Group: Read, Write, Execute
+* User: Read, Execute
+
+Check the permissions with this command:
+
+----
+ls -l /var/lib/pgsql /var/spacewalk/
+----
+
+The output should look like this:
+
+----
+(0750) drwxr-x--- 1 postgres postgres /var/lib/pgsql
+(0775) drwxrwxr-x 1 wwwrun   www      /var/spacewalk/
+----
+
+If required, change the permissions with these commands:
+
+----
+chmod 750 /var/lib/pgsql
+chmod 775 /var/spacewalk
+----
