--- a/branding/pdf/entities.adoc
+++ b/branding/pdf/entities.adoc
@@ -58,6 +58,8 @@
 :vmhost: VM Host Server
 :xen: Xen
 :kvm: KVM
+:k8s: Kubernetes
+:caasp: SUSE CaaS Platform
 :homepage: https://github.com/SUSE/doc-susemanager
 :linkattrs:
 :sectlinks:
@@ -69,4 +71,3 @@
 :toc: left
 :listing-caption: Listing
 :doctype: book
-
