--- a/modules/installation/pages/general-requirements.adoc
+++ b/modules/installation/pages/general-requirements.adoc
@@ -110,3 +110,10 @@ If required, change the permissions with these commands:
 chmod 750 /var/lib/pgsql
 chmod 775 /var/spacewalk
 ----
+
+And owners with:
+
+----
+chown postgres:postgres /var/lib/pgsql
+chown wwwrun:www /var/spacewalk/
+----
