--- a/modules/administration/pages/maintenance-window.adoc
+++ b/modules/administration/pages/maintenance-window.adoc
@@ -116,6 +116,7 @@ the update of the main server (master server) is completed.
 
 == {productname} Proxy
 
-Proxies should be updated after all server updates are complete.
+Proxies should be updated as soon as Server updates are complete.
+In general, running a Proxy connected to a Server on a different version is not supported. The only exception is for the duration of updates where it is expected that the Server is updated first, so the Proxy could run the previous version temporarily.
 Especially in a version 3.2 to 4.0 migration you should upgrade the server first, then any proxy.
 For more information, see xref:upgrade:proxy-update.adoc[] and xref:upgrade:proxy-migration.adoc[].
