--- a/modules/client-configuration/pages/clients-centos.adoc
+++ b/modules/client-configuration/pages/clients-centos.adoc
@@ -101,9 +101,10 @@ ifeval::[{uyuni-content} == true]
 By default, {centos} does not trust the GPG key for {productname} {centos} client tools.
 
 The clients can be successfully bootstrapped without the GPG key being trusted.
+
 However, they will not be able to install new client tool packages or update them.
 
-If this occurs, add this key to the [systemitem]``ORG_GPG_KEY=`` parameter in all {centos} bootstrap scripts:
+To fix this, add this key to the [systemitem]``ORG_GPG_KEY=`` parameter in all {centos} bootstrap scripts:
 ----
 uyuni-gpg-pubkey-0d20833e.key
 ----
